# Chobits

./: .gitattributes  .gitignore  .release-plz.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.en.md  README.md  build.sh  example_config.toml  install.sh
.cargo/: config.toml
.github/: Release.yml
.github/workflows/: Release.yml  packaging.yml  tests.yml
crates/chobits/: Cargo.toml
crates/chobits-bar/: Cargo.toml
crates/chobits-bar/src/: main.rs  tcp.rs  ui.rs
crates/chobits-meta/: Cargo.toml
crates/chobits-meta/src/: http.rs  lib.rs  proxy.rs  snapshot.rs  viewport.rs
crates/chobits-send/: Cargo.toml
crates/chobits-send/src/: main.rs
crates/chobits-start/: Cargo.toml
crates/chobits-start/src/: main.rs  session.rs
crates/chobits-zellij/: Cargo.toml  build.rs
crates/chobits-zellij/src/: main.rs
crates/chobits/src/: bar.rs  config.rs  lib.rs  llm.rs  main.rs  osf.rs  snapshot.rs  vts.rs  zellij.rs
scripts/: build.sh  install.ps1  install.sh  release.sh
tool/: list_vts_hotkeys.py  openseeface_play_packet.py  openseeface_record_packet.py
