[workspace]
resolver = "2"
members = [
    "crates/chobits-meta",
    "crates/chobits",
    "crates/chobits-zellij",
    "crates/chobits-bar",
    "crates/chobits-start",
]
# Exclude WASM-only crate from native builds and `cargo test` at the workspace root.
# Plugin compile check: cargo check -p chobits-zellij --target wasm32-wasip1
default-members = [
    "crates/chobits-meta",
    "crates/chobits",
    "crates/chobits-bar",
    "crates/chobits-start",
]

[workspace.package]
version = "0.3.3"
edition = "2021"
license = "MIT"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
cargo_common_metadata = "allow"
pedantic = "allow"
nursery = "allow"
