[package]
name = "chobits-start"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[[bin]]
name = "chobits-start"
path = "src/main.rs"

[dependencies]
chobits = { path = "../chobits", version = "0.5.1" }
chobits-meta = { path = "../chobits-meta", version = "0.5.1" }
chrono = "0.4"
