[package]
name = "chobits-zellij"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "chobits-zellij"
path = "src/main.rs"
test = false
doc = false

[dependencies]
chobits-meta = { path = "../chobits-meta" }
zellij-tile = "0.44"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
chobits-meta = { path = "../chobits-meta" }
