[package]
name = "chobits"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[[bin]]
name = "chobits"
path = "src/main.rs"

[lib]
name = "chobits"
path = "src/lib.rs"

[dependencies]
chobits-meta = { path = "../chobits-meta", version = "0.5.1" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "1"
toml = "0.8"
gag = "1"
directories = "5"
rand = "0.10"
jsonrepair-rs = { version = "0.2.1", features = ["serde"] }
vtubestudio = "0.9"
